# Corten-MediaEngine

./: .gitignore  PROJECT-COMPLETION-REPORT.md  orchestration-resume-context.json
components/audio_decoders/: CLAUDE.md  Cargo.toml  README.md
components/audio_decoders/src/: aac_decoder.rs  factory.rs  lib.rs  mp3_decoder.rs  opus_decoder.rs
components/audio_decoders/tests/: unit_tests.rs
components/audio_decoders/tests/unit/: mod.rs  test_aac.rs  test_factory.rs  test_mp3.rs  test_opus.rs
components/buffer_manager/: CLAUDE.md  Cargo.toml  README.md
components/buffer_manager/benches/: buffer_benchmarks.rs
components/buffer_manager/src/: cache.rs  config.rs  error.rs  lib.rs  manager.rs  ring.rs
components/drm_support/: CLAUDE.md  Cargo.toml  README.md
components/drm_support/src/: cdm.rs  eme.rs  lib.rs  types.rs
components/drm_support/tests/: integration_tests.rs  unit_tests.rs
components/drm_support/tests/integration/: drm_session_lifecycle.rs  mod.rs
components/drm_support/tests/unit/: mod.rs  test_cdm.rs  test_eme.rs  test_types.rs
components/format_parsers/: CLAUDE.md  Cargo.toml  README.md
components/format_parsers/src/: demuxer.rs  lib.rs  matroska.rs  mp4.rs  ogg.rs  types.rs  webm.rs
components/format_parsers/tests/: test_matroska.rs  test_mp4.rs  test_ogg.rs  test_webm.rs
components/hardware_accel/: CLAUDE.md  Cargo.toml  README.md
components/hardware_accel/src/: capabilities.rs  context.rs  dxva.rs  error.rs  lib.rs  vaapi.rs  videotoolbox.rs
components/hardware_accel/tests/: integration_test.rs  test_capabilities.rs  test_context.rs  test_error.rs  test_platform_stubs.rs  test_vaapi.rs
components/media_capture/: CLAUDE.md  Cargo.toml  README.md
components/media_capture/src/: camera_capture.rs  device_enumerator.rs  lib.rs  microphone_capture.rs  screen_capture.rs  types.rs
components/media_capture/tests/: lib.rs
components/media_capture/tests/unit/: mod.rs  test_camera_capture.rs  test_device_enumerator.rs  test_microphone_capture.rs  test_screen_capture.rs  test_types.rs
components/media_engine/: CLAUDE.md  Cargo.toml  README.md
components/media_engine/src/: engine.rs  lib.rs  types.rs
components/media_engine/tests/: integration_test.rs
components/media_pipeline/: CLAUDE.md  Cargo.toml  README.md
components/media_pipeline/src/: lib.rs  pipeline.rs  sync.rs  types.rs
components/media_pipeline/tests/: integration_tests.rs
components/media_pipeline/tests/unit/: mod.rs  test_pipeline.rs  test_sync.rs
components/media_session/: CLAUDE.md  Cargo.toml  README.md
components/media_session/src/: lib.rs  manager.rs  session.rs  state.rs
components/media_session/tests/: test_integration.rs  test_media_session.rs  test_session_manager.rs  test_session_state.rs
components/shared_types/: CLAUDE.md  Cargo.toml  README.md
components/shared_types/src/: codecs.rs  errors.rs  formats.rs  lib.rs  media.rs  session.rs  traits.rs
components/shared_types/tests/: integration_tests.rs
components/shared_types/tests/unit/: mod.rs  test_codecs.rs  test_errors.rs  test_formats.rs  test_media.rs  test_traits.rs
components/video_decoders/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
components/video_decoders/src/: av1.rs  factory.rs  h264.rs  lib.rs  vp9.rs
components/video_decoders/tests/unit/: mod.rs  test_av1_decoder.rs  test_factory.rs  test_h264_decoder.rs  test_vp9_decoder.rs
components/webrtc_integration/: CLAUDE.md  Cargo.toml  README.md
components/webrtc_integration/src/: echo_cancellation.rs  encoder.rs  jitter_buffer.rs  lib.rs  rtcp.rs  rtp.rs
components/webrtc_integration/tests/: mod.rs  packet_flow.rs  test_encoder.rs  test_jitter_buffer.rs  test_rtp.rs
contracts/: audio_decoders.yaml  buffer_manager.yaml  drm_support.yaml  format_parsers.yaml  hardware_accel.yaml  media_capture.yaml  media_engine.yaml  media_pipeline.yaml  media_session.yaml  shared_types.yaml  video_decoders.yaml  webrtc_integration.yaml
docs/: ARCHITECTURE.md
orchestration/: MIGRATION_LOG.json  create_components.sh  project-metadata.json
orchestration/data/: installation_manifest.json  migration_log.json
orchestration/data/state/: extraction_metadata.json  queue_state.json  spec_manifest.json
specifications/: media-engine-specification.md
