[package]
name = "cortenbrowser-buffer_manager"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.5"
cortenbrowser-shared_types = { path = "../shared_types" }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "buffer_benchmarks"
harness = false

[features]
default = []
