[package]
name = "cortenbrowser-drm_support"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"

# Shared types from sibling component
cortenbrowser-shared_types = { path = "../shared_types" }

# Serialization for session data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation for session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding for license requests
base64 = "0.21"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# Mocking utilities
mockall = "0.12"

[features]
default = []
