[package]
name = "cortenbrowser-format_parsers"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Shared types from the media engine
cortenbrowser-shared_types = { path = "../shared_types" }

# Container format parsing crates
mp4 = "0.14"
webm-iterable = "0.6"
ogg = "0.9"
matroska = "0.15"

# Utilities
bytes = "1.5"
thiserror = "1.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"

[features]
default = []
