[package]
name = "cortenbrowser-hardware_accel"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core browser interfaces
cortenbrowser-shared_types = { path = "../shared_types" }

# Error handling
thiserror = "1.0"

# Platform detection and FFI
libc = "0.2"

# Linux VA-API (optional - only on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
# Note: va-rs would go here, but we'll mock for now since we need VA-API headers

[dev-dependencies]
# Testing
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
# Future: vaapi support when va-rs is available
# vaapi = ["va-rs"]
