[package]
name = "cortenbrowser-media_capture"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["sync", "rt"] }
cortenbrowser-shared_types = { path = "../shared_types" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
