[package]
name = "cortenbrowser-media_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Concurrency primitives
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Component dependencies
cortenbrowser-shared_types = { path = "../shared_types" }

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[features]
default = []
