[package]
name = "cortenbrowser-media_session"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
cortenbrowser-shared_types = { path = "../shared_types" }
parking_lot = "0.12"
tokio = { version = "1.35", features = ["sync", "time"] }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
