[package]
name = "cortenbrowser-video_decoders"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Shared types from our project
cortenbrowser-shared_types = { path = "../shared_types" }

# Video codec libraries
openh264 = { version = "0.6", optional = true }
vpx-sys = { version = "0.1", optional = true }
dav1d = { version = "0.10", optional = true }
libc = "0.2"               # For FFI operations

# Error handling
thiserror = "1.0"

# Async runtime (for future async support)
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
# Testing
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
# Default only includes h264 and av1 - vp9 requires vpx system lib with compatible bindgen
default = ["h264", "av1"]
h264 = ["openh264"]
vp9 = ["vpx-sys"]
av1 = ["dav1d"]
